# potato_calculator_mobile_app

./: .gitignore  README.md  README.rst  pyproject.toml  sales.csv
.buildozer/: state.db
.buildozer/android/app/: calculator.kv  main.py
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/: build.gradle  dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/assets/: private.tar
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/res/values/: strings.xml
src/: .env.example  calculator.kv  conf.py  main.py  utils.py
