[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "potato_calculator"
version = "0.1.0"
authors = [
    {name="Yudai Yamase"}
]
description = "a web application for calculating the price of potatoes easily"
readme = "README.rst"
requires-python = ">=3.11, <4"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dotenv==1.0.1",
    "kivy==2.3.1",
    "pandas==2.2.3",
]

[project.scripts]
dev = "potato.main:dev"


# [project.urls]
# "Homepage" = "https://github.com/yudai-yam/xss.web.app"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[project.optional-dependencies]

android-build = [
    "buildozer==1.5.0",
    "setuptools==80.9.0",
    "Cython==0.29.36",
]